--- a/bean-validation/pom.xml
+++ b/bean-validation/pom.xml
@@ -13,6 +13,10 @@
     <packaging>pom</packaging>
     <name>Bean Validation</name>
 
+    <modules>
+        <module>hibernate-validator</module>
+    </modules>
+
     <properties>
         <postgresql-jdbc.version>9.4-1206-jdbc42</postgresql-jdbc.version>
         <hibernate-entitymanager.version>5.0.0.Final</hibernate-entitymanager.version>
