--- a/bean-validation/hibernate-validator/src/main/resources/ValidationMessages.properties
+++ b/bean-validation/hibernate-validator/src/main/resources/ValidationMessages.properties
@@ -1,1 +1,2 @@
+io.dungdm93.validation.hibernate.validator.MaxAllowedFuelConsumption.message=${validatedValue} is outside the max fuel consumption.
 io.dungdm93.validation.hibernate.validator.ValidPart.message='null' is not a valid car part.
