--- a/bean-validation/hibernate-validator/src/main/resources/ValidationMessages.properties
+++ b/bean-validation/hibernate-validator/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,3 @@
 io.dungdm93.validation.hibernate.validator.MaxAllowedFuelConsumption.message=${validatedValue} is outside the max fuel consumption.
+io.dungdm93.validation.hibernate.validator.MinTowingCapacity.message=Not enough towing capacity.
 io.dungdm93.validation.hibernate.validator.ValidPart.message='null' is not a valid car part.
