--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,13 @@
 
     <groupId>io.dungdm93</groupId>
     <artifactId>getting-started</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>Getting Started</name>
+
+    <modules>
+        <module>bytecode-instrumentation</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
